[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cartoeddy"
version = "0.1.0"
description = "Cartographer3D adapter for BTT Eddy / Eddy Duo sensors"
requires-python = ">=3.8"
dependencies = [
    "cartographer3d-plugin>=1.5.0",
    "typing-extensions>=4.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cartoeddy"]
